Finally port custom nether portal